--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 CONTENT_PORT=8080
 CONTENT_MONGO_URI="mongodb+srv://dating:dating@cluster0.sfdwkju.mongodb.net/"
+
+RAZORPAY_KEY_ID = rzp_test_JOC0wRKpLH1cVW
+RAZORPAY_KEY_SECRET = 9EzSlxvJbTyQ2Hg0Us5ZX4VD
